# transformer-circuit-visualizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
apps/: streamlit_app.py
docs/: architecture.md  demo.md  release_checklist.md  roadmap.md
scripts/: debug_prediction.py  smoke_analyze.py
src/transformer_circuit_visualizer/: __init__.py  analysis.py  api.py  config.py  main.py  model_service.py  schemas.py  ui_helpers.py
tests/: __init__.py  fakes.py  test_analysis.py  test_api.py  test_model_service.py  test_real_model_smoke.py  test_schemas.py  test_ui_helpers.py
